# AOC

./: .gitignore
2023/day1/: CMakeLists.txt  day1_1.cpp  day1_2.cpp
2023/day2/: CMakeLists.txt  cube.cpp  cube.h  cubecounter.cpp  cubecounter.h  day2_1.cpp
2023/day3/: CMakeLists.txt  day3.cpp
2023/day4/: CMakeLists.txt  day4.cpp
2023/day4/card/: card.h
